--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="{% static 'social_clone/styles/main.css'%}">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Leo Chat</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand mynav" href="{% url 'home'%}}">Leo chat</a>
+
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated%}
+                    <li><a href="#">POST</a></li>
+                    <li><a href="#">GROUP</a></li>
+                    <li><a href="#">CREATE POST</a></li>
+                    <li><a href="{% url 'accounts:logout'%}">Log Out</a></li>
+                {% else %}
+                    <li><a href="#">POST</a></li>
+                    <li><a href="{% url 'accounts:login'%}">Log In</a></li>
+                    <li><a href="{% url 'accounts:signup'%}">Sign Up</a></li>
+                {% endif %}
+            </ul>
+        </div>
+        
+    </nav>
+    <div class="container mycontent">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
