--- a/groups/templates/groups/group_base.html
+++ b/groups/templates/groups/group_base.html
@@ -1,10 +1,10 @@
-{% entends "base.html"%}
-{% block content%}
+{% extends "base.html" %}
+{% block content %}
 <div class="container">
     <div class="row">
-        {% block pregroup %}{% endblock%}
-        {% block group_content %}{% endblock%}
-        {% block Postgroup %}{% endblock%}
+        {% block pregroup %}{% endblock %}
+        {% block group_content %}{% endblock %}
+        {% block postgroup %}{% endblock %}
     </div>
 </div>
-{% endblock%}
+{% endblock %}
