--- a/groups/templates/groups/group_form.html
+++ b/groups/templates/groups/group_form.html
@@ -1,9 +1,9 @@
-{% extends "group/group_base.html"}
-{% load bootstrap4}
+{% extends "groups/group_base.html" %}
+{% load bootstrap4 %}
 
 {% block group_content %}
 <h4>Create a new group!</h4>
-    <form action="{% url 'group:create'%}" method="post" id='groupForm'>
+    <form action="{% url 'groups:create'%}" method="post" id='groupForm'>
         {% csrf_token %}
         {% bootstrap_form form %}
         <input type="submit" class='btn btn-primary btn-large' value="Create">
