--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -6,28 +6,28 @@
     <div class="content">
         {% if user.is_authenticated %}
         <h2>Welcome back!
-            <a href="{% url 'posts: for_user' username=user.usermame%}">
+            <a href="{% url 'posts:for_user' username=user.username %}">
                 @{{user.username}}
             </a>
         </h2>
-        {% endif }
+        {% endif %}
         <h2>Group</h2>
-        <p>Welcome to thge groups page!</p>
+        <p>Welcome to the groups page!</p>
     </div>
 
     {% if user.is_authenticated %}
-    <a href="{url 'group:create'}" class="btn btn-md btn-fill btn-warning" >
+    <a href="{% url 'groups:create' %}" class="btn btn-md btn-fill btn-warning" >
         <span class="glyphicon glyphicon-plus-sign">Create New Group!</span>
     </a>
-    {% endif}
+    {% endif %}
 </div>
-{% endblock%}
+{% endblock %}
 
-{% block group_content%}
+{% block group_content %}
 <div class="col-md-8">
     <div class="list-group">
-        {% for group in object.list %}
-        <a class=" list-group-item" href="{% url group:single slug=group:slug}">
+        {% for group in object_list %}
+        <a class="list-group-item" href="{% url 'groups:single' slug=group.slug %}">
             <h3 class="title list-group-item-heading">{{group.name}}</h3>
             <div class="list-group-item-text container-fluid">
                 {{group.description_html|safe}}
@@ -46,4 +46,4 @@
         {% endfor %}
     </div>
 </div>
-{% endblock%}
+{% endblock %}
