--- a/posts/templates/posts/post_base.html
+++ b/posts/templates/posts/post_base.html
@@ -1,10 +1,10 @@
-{% extends "base.html %}
+{% extends "base.html" %}
 
 {% block content %}
 <div class="posts-page">
     <div class-"container">
         <div class="row">
-            {% block prepost %}{% endblock %}
+            {% block pre_post %}{% endblock %}
             {% block post_content %}{% endblock %}
             {% block post_post %}{% endblock %}
         </div>
