--- a/posts/templates/posts/post_confirm_delete.html
+++ b/posts/templates/posts/post_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "'posts/post_base.html'"%}
+{% extends "posts/post_base.html"%}
 
 {% block post_content %}
 <h3>Are you sure you want to delete this post?</h3>
@@ -9,7 +9,7 @@
 
 <form method="post">
     {% csrf_token %}
-    <input type="subimt" value="Confirm Delete" class="btn btn-danger btn-large">
-    <a href="{% url 'posts:single' username=user.username pk=object.pk%}" class='btn btn-simple btn-lg btn-default'>Cancel</a>
+    <input type="submit" value="Confirm Delete" class="btn btn-danger btn-large">
+    <a href="{% url 'posts:single' username=user.username pk=object.pk %}" class='btn btn-simple btn-lg btn-default'>Cancel</a>
 </form>
 {% endblock %}
